# gmailAssistant

./: .gitignore  README.md  pyproject.toml
src/gmail-unsuscribe-mcp/: __init__.py  server.py
src/gmail_unsuscribe_mcp/: gmail_auth.py  gmail_service.py  server.py
