[project]
name = "gmailassistant"
version = "0.1.0"
description = "MCP server for desuscribe from emails"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.0.2",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
gmail_unsuscribe_mcp = "gmail_unsuscribe_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_unsuscribe_mcp"]

